--- a/Restaurant Ordering System/public_html/Employee/employee_login.html
+++ b/Restaurant Ordering System/public_html/Employee/employee_login.html
@@ -28,6 +28,9 @@
         Log In
       </button>
 
+<p class="text-center text-sm text-gray-500 mt-4"> Don’t have an account? <a href="/Employee/employee_register.html" class="text-amber-600 hover:underline font-medium"> Register here </a> </p> 
+
+
       <p class="text-center text-sm text-gray-500 mt-4">
         <a href="/index.html" class="text-amber-600 hover:underline">← Back to Landing Page</a>
       </p>
