add QR code feature

--- a/Restaurant Ordering System/public_html/Customer/customer_main.html
+++ b/Restaurant Ordering System/public_html/Customer/customer_main.html
@@ -44,6 +44,24 @@
         Browse Menu
       </a>
     </div>
+ 
+<!--  QR Code (stable, points to customer_main)
+  <div class="max-w-6xl mx-auto mb-10">
+    <div class="bg-white border border-gray-200 rounded-lg p-4 sm:p-6 shadow-sm flex flex-col items-center">
+      <h3 class="text-lg font-semibold mb-3">Scan to Order</h3>
+      <img src="/qr.png" alt="Restaurant QR Code" width="220" height="220"
+           class="rounded shadow mb-3" loading="lazy">
+      <a href="/qr.png" download="Restaurant-QR.png"
+         class="text-sm bg-gray-800 text-white px-3 py-2 rounded hover:bg-gray-900 transition">
+         Download QR for Printing
+      </a>
+      <p class="text-xs text-gray-500 mt-2">
+        This QR always opens the Customer Main page for this restaurant.
+      </p>
+    </div>
+  </div>
+-->
+
 
     <!-- Featured Items (dynamic) -->
     <section id="featuredItems" class="grid gap-4 sm:gap-6 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4">
